<resources>
    <!--权限-->
    <string name="sd_card_permissions">圈乎要使用sd卡权限</string>
    <string name="sd_card_permissions_run">圈乎要使用sd卡,否则app可能无法正常运行</string>
    <string name="camera_permissions">圈乎要调用摄像头</string>
    <string name="camera_sd_permissions_run">圈乎要使用摄像头,使用sd卡权限，否则app可能无法正常运行</string>

    <string name="permission_warn">请进入手机的应用管理中的权限设置允许\"圈乎\"访问</string>
    <string name="status_is_loading">正在加载中...</string>
    <string name="status_un_network">当前网络不可用，请检查网络设置</string>
    <string name="status_load_error">加载失败\n您的网络开小差了~</string>
    <string name="status_empty_load">没有您要的内容</string>
    <string name="status_data_luck">数据不足</string>
    <string name="status_web_error">哎呀,页面不存在了~</string>
    <string name="status_news_empty">哦哦,您还没有收到任何消息~</string>
    <string name="personal_no_sd_card">SD卡不存在</string>
    <string name="status_network_retry">点击重试</string>

    <string name="confirm">确认</string>
    <string name="define">确定</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="complete">完成</string>

    <string name="save_to_phone">保存到手机</string>


    <string name="file_format_un_sure">文件格式不正确</string>

    <!--选择音视频相关-->
    <string name="pic_choose_local">从本地选择图片</string>
    <string name="pic_shoot">拍摄图片</string>
    <string name="video_choose_local">从本地选择视频</string>
    <string name="video_shoot">拍摄视频</string>
    <string name="audio_choose_local">从本地选择音频</string>
    <string name="audio_shoot">录制音频</string>
    <string name="please_choose_video">请选择一个视频作品发布</string>
    <string name="not_found_video">抱歉,没有找到该视频资源</string>
    <string name="not_found_audio">抱歉,没有找到该音频资源</string>
    <string name="get_video_fail">抱歉,获取视频资源失败</string>
    <string name="get_audio_fail">抱歉,获取音频资源失败</string>
    <string name="get_audio_fail_two">抱歉,获取拍摄视频失败</string>


    <string name="play_video_error">视频播放错误</string>
    <string name="upload_video_fail">上传视频失败</string>
    <string name="upload_pic_fail">上传图片失败</string>


    <string name="rmb_yuan">悠然币</string>
    <string name="yuan">元</string>
    <string name="all">全部</string>

    <string name="comple">完成</string>
    <string name="load_fail">加载失败</string>
    <string name="from">来自</string>
    <string name="two_hour_later">2小时前</string>
    <string name="default_circle">创业达人圈</string>
    <string name="image_adaptation_stitching">x-oss-process=image/resize,m_lfit,limit_0,w_%1$d,h_%2$d</string>
    <string name="pay_type">请选择支付方式</string>
    <string name="pay_bank">银行卡支付</string>
    <string name="pay_wx">微信支付</string>
    <string name="pay_zfb">支付宝支付</string>
    <string name="zfb">支付宝</string>
    <string name="account_recharge">充值</string>
    <string name="recharge_money">充值金额</string>
    <string name="backstage_configuration_error">后台配置错误</string>
    <string name="clear_chach">确定要清空吗？</string>

    <string name="user_kick_hint">您已在其他地方登录,请重新登录</string>

    <string name="kick_again_login">重新登录</string>
    <string name="kick_exit_app">退出应用</string>
    <string name="kick_hint">您的账号已在另一设备上登录，是否重新登录？</string>
    <string name="kick_watch_txt">随便看看</string>
</resources>
