<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/id_layout_check_pwd"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/transparent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_pop_white_btn"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/px88"
        android:layout_marginRight="@dimen/px88"
        >

        <TextView
            android:id="@+id/id_tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minEms="10"
            android:padding="@dimen/px70"
            android:singleLine="false"
            android:text="@string/clear_chach"
            android:textColor="@color/color_text_black"
            android:textSize="@dimen/font_48"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px2"
            android:background="@color/color_DDDDDD"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_pop_gray_btn"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_tv_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/left_bottom_roller_f5_bg"
                android:gravity="center"
                android:padding="@dimen/px30"
                android:text="@string/cancel"
                android:textColor="@color/font_color_blue"
                android:textSize="@dimen/px50"/>

            <View
                android:layout_width="@dimen/px2"
                android:layout_height="match_parent"
                android:background="@color/color_DDDDDD"/>

            <TextView
                android:id="@+id/id_tv_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/right_bottom_roller_f5_bg"
                android:gravity="center"
                android:padding="@dimen/px30"
                android:text="@string/confirm"
                android:textColor="@color/font_color_blue"
                android:textSize="@dimen/px50"/>


        </LinearLayout>
    </LinearLayout>
</RelativeLayout>