<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_layout_check_pwd"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/transparent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_pop_white_btn"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/id_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minEms="10"
            android:paddingLeft="@dimen/px70"
            android:paddingRight="@dimen/px70"
            android:paddingTop="@dimen/px70"
            android:textColor="@color/color_text_black"
            android:textSize="@dimen/font_48" />

        <TextView
            android:id="@+id/id_tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minEms="10"
            android:padding="@dimen/px70"
            android:text="@string/permission_warn"
            android:textColor="@color/color_dark_gray"
            android:textSize="@dimen/font_48" />

        <View style="@style/line_horizontal_gray_s" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_bg_bottom_roller_f4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_tv_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:gravity="center"
                android:padding="@dimen/px30"
                android:text="@string/cancel"
                android:textColor="@color/txt_pop_detail"
                android:textSize="@dimen/px50" />

            <View style="@style/line_vertical_gray_s" />

            <TextView
                android:id="@+id/id_tv_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:gravity="center"
                android:padding="@dimen/px30"
                android:text="@string/setting"
                android:textColor="@color/txt_pop_detail"
                android:textSize="@dimen/px50" />


        </LinearLayout>
    </LinearLayout>
</RelativeLayout>